# info-spider

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  config.yaml.example  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
actors/: bing_search_actor.py  google_search_actor.py  google_suggest_actor.py  google_trends_actor.py  product_hunt_actor.py  reddit_community_actor.py  twitter_random_reading_actor.py  twitter_trending_actor.py  twitter_user.py
core/: actor_registry.py  actor_server.py  base_actor.py  models.py  plugin_loader.py  setup_logging.py  task_instance.py  task_storage.py  url_normalizer.py  utils.py
docs/: download_file_remote_browser.md  google-trends-scroll-debug.md  google_trends_actions_test.md
skills/: info-spider.skill
skills/info-spider/: SKILL.md
skills/info-spider/references/: cli_reference.md
tests/: __init__.py  test_elonmusk.py  test_google_search.py  test_google_suggest.py  test_google_trends.py  test_helper.py  test_product_hunt.py  test_reddit_community.py  test_twitter_actor.py  test_twitter_random_reading.py  test_twitter_trending.py
utils/: product_hunt_api_client.py
